Fixed spacing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -380,7 +380,7 @@ img {
   align-items: center;
   justify-content: center;
   max-width: 1400px;
-  padding: 0px 30px;
+  padding: 0px 32px;
   height: auto;
 }
 
@@ -397,8 +397,8 @@ img {
   flex-grow: 1;
   overflow: hidden;
 
-  padding: 25px;
-  margin: 25px;
+  padding: 24px;
+  margin: 24px;
 
   display: flex;
   flex-direction: row;
@@ -430,7 +430,7 @@ img {
   width: 50%;
   height: 25%;
 
-  padding: 30px 30px 0 30px;
+  padding: 24px 24px 0 24px;
 
   display: flex;
   flex-direction: column;
@@ -470,12 +470,12 @@ img {
 
 #ctabutton {
   width: 200px;
-  padding: 10px 20px;
+  padding: 8px 16px;
   margin: 2em 0;
   background-color: black;
   border: 1px solid black;
 
-  border-radius: 25px;
+  border-radius: 24px;
   color: white;
   font-weight: 500;
   text-align: center;
@@ -493,6 +493,7 @@ img {
 
 h2.cardtitle {
   font-weight: 500;
+  margin-bottom: 8px;
 
   text-decoration: none;
 }
@@ -622,7 +623,7 @@ title {
     align-items: center;
     justify-content: center;
 
-    padding: 20px;
+    padding: 0px 0px 16px 0px;
 
     text-align: center;
 
@@ -631,9 +632,10 @@ title {
   .casestudy {
     opacity: 1;
     flex-direction: column;
-    width: 80%;
+    width: auto;
+    margin: 24px 0px;
 
-    padding: 0 30px 0 30px;
+    padding: 0 24px 0 24px;
   }
 
   .cardsubtitle {
